--- a/app/src/main/res/layout/row_destination.xml
+++ b/app/src/main/res/layout/row_destination.xml
@@ -4,11 +4,11 @@
     android:layout_height="match_parent"
     android:gravity="center_vertical|left">
 
-
         <TextView
             android:id="@+id/tv_description"
             android:layout_width="wrap_content"
             android:layout_height="100px"
+            android:gravity="center"
             android:text="Name"
         />
 
