--- a/app/src/main/res/layout/row_destination.xml
+++ b/app/src/main/res/layout/row_destination.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical|left">
@@ -7,9 +8,12 @@
         <TextView
             android:id="@+id/tv_description"
             android:layout_width="wrap_content"
-            android:layout_height="100px"
+            android:layout_height="75dp"
+            android:layout_marginStart="50px"
             android:gravity="center"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
             android:text="Name"
-        />
+            android:textSize="20dp" />
 
 </LinearLayout>
