--- a/app/src/main/res/layout/activity_destination.xml
+++ b/app/src/main/res/layout/activity_destination.xml
@@ -8,7 +8,9 @@
         android:id="@+id/available_destination_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@null"
-        android:dividerHeight="0dp" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp" />
 
 </RelativeLayout>
