--- a/app/src/main/res/layout/row_destination.xml
+++ b/app/src/main/res/layout/row_destination.xml
@@ -3,17 +3,50 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_vertical|left">
+    android:orientation="horizontal"
+    android:padding="15dp"
+    android:baselineAligned="false">
+
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+    >
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:contentDescription="@string/classroom_icon"
+            android:src="@drawable/classroom" />
+    </FrameLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:paddingStart="30dp"
+        android:paddingTop="15dp"
+        android:paddingEnd="30dp"
+        android:paddingBottom="15dp">
 
         <TextView
             android:id="@+id/tv_description"
             android:layout_width="wrap_content"
-            android:layout_height="75dp"
-            android:layout_marginStart="50px"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
             android:text="Name"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:textStyle="bold" />
 
+        <TextView
+            android:id="@+id/tv_extra"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="extra"
+            android:textStyle="italic" />
+    </LinearLayout>
 </LinearLayout>
