--- a/app/src/main/res/layout/select_destination_dialog_fragment.xml
+++ b/app/src/main/res/layout/select_destination_dialog_fragment.xml
@@ -7,9 +7,10 @@
         android:id="@+id/select_destination_question"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textStyle="bold"
-        android:textAlignment="center"
+        android:layout_marginTop="20dp"
         android:gravity="center"
-        android:layout_alignParentTop="true" />
+        android:text="sdssdsdsdsd"
+        android:textAlignment="center"
+        android:textStyle="bold" />
 
 </LinearLayout>
