--- a/app/src/main/res/layout/activity_destination.xml
+++ b/app/src/main/res/layout/activity_destination.xml
@@ -4,13 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/available_destination_list"
-        android:layout_width="match_parent"
+    <fragment
+        android:id="@+id/available_destination_list_fragment"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp" />
+        android:layout_width="match_parent"
+        class="com.nicok.pathguide.fragments.selectDestinationList.Fragment" />
 
 </RelativeLayout>
