--- a/app/src/main/res/layout/fragment_destination_list.xml
+++ b/app/src/main/res/layout/fragment_destination_list.xml
@@ -2,12 +2,12 @@
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
-    android:name="com.nicok.pathguide.fragments.SelectDestinationListFragment"
+    android:id="@+id/available_destination_list"
+    android:name="com.nicok.pathguide.fragments.selectDestinationList.SelectDestinationFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".fragments.SelectDestinationListFragment"
-    tools:listitem="@layout/fragment_item" />
+    tools:context=".fragments.selectDestinationList.SelectDestinationFragment"
+    tools:listitem="@layout/fragment_destination" />
