--- a/app/src/main/res/layout/row_destination.xml
+++ b/app/src/main/res/layout/row_destination.xml
@@ -2,16 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:baselineAligned="false"
+    android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:padding="15dp">
+    android:padding="15dp"
+    android:baselineAligned="false">
 
 
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        >
 
         <ImageView
             android:id="@+id/img_icon"
