--- a/app/src/main/res/layout/activity_current_location.xml
+++ b/app/src/main/res/layout/activity_current_location.xml
@@ -1,53 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.CurrentLocationActivity">
 
-
-    <LinearLayout
+    <include
+        android:id="@+id/activity_current_location_unknown"
+        layout="@layout/activity_current_location_unknown"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="15dp">
+        android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/tv_currentLocationTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:freezesText="false"
-            android:text="UBICACIÓN ACTUAL"
-            android:textSize="36sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tv_currentLocationDescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="BAÑO"
-            android:textSize="24sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tv_extra"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Segundo subsuelo" />
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Repetir Instrucciones" />
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Cancelar" />
-
-    </LinearLayout>
+    <include
+        android:visibility="gone"
+        android:id="@+id/activity_current_location_path"
+        layout="@layout/activity_current_location_path_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </FrameLayout>
