--- a/app/src/main/res/layout/activity_current_location.xml
+++ b/app/src/main/res/layout/activity_current_location.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.CurrentLocationActivity">
+    android:orientation="vertical"
+    tools:context=".activities.CurrentLocationActivity"
+    tools:padding="15dp">
 
     <include
         android:id="@+id/activity_current_location_unknown"
@@ -12,10 +14,15 @@
         android:layout_height="wrap_content" />
 
     <include
-        android:visibility="gone"
-        android:id="@+id/activity_current_location_path"
-        layout="@layout/activity_current_location_path_list"
+        android:id="@+id/activity_current_location_known"
+        layout="@layout/activity_current_location_known"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-</FrameLayout>
+    <Button
+        android:id="@+id/bt_cancel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/current_location_cancel" />
+
+</LinearLayout>
