--- a/app/src/main/res/layout/cancel_trip_dialog_fragment.xml
+++ b/app/src/main/res/layout/cancel_trip_dialog_fragment.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tv_current_location_cancel_confirm"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="No se puede obtener la ubicación actual, por favor acérquese a algún punto."
-        android:textSize="18sp"
-        tools:text="No se puede obtener la ubicación actual, por favor acérquese a algún punto." />
+        android:text="@string/current_location_cancel_confirm" />
 </LinearLayout>
