--- a/app/src/main/res/layout/activity_current_location_known.xml
+++ b/app/src/main/res/layout/activity_current_location_known.xml
@@ -27,23 +27,15 @@
         android:layout_height="wrap_content"
         android:textStyle="italic" />
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/tv_instructions"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/tv_instructions"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Button" />
-
-    </LinearLayout>
+    <Button
+        android:id="@+id/bt_repeat_instructions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/current_location_repeat_instructions" />
 
 </LinearLayout>
