--- a/app/src/main/res/layout/cancel_trip_dialog_fragment.xml
+++ b/app/src/main/res/layout/cancel_trip_dialog_fragment.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:padding="30dp">
+
+
 
     <TextView
         android:id="@+id/tv_current_location_cancel_confirm"
         android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/current_location_cancel_confirm" />
+        android:layout_height="match_parent"
+        android:text="@string/current_location_cancel_confirm"
+        android:textSize="20sp"
+        android:textStyle="bold"/>
+
 </LinearLayout>
