--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
+<layer-list
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:opacity="opaque">
-    <item android:drawable="@color/colorPrimary"/>
+    <item android:drawable="@color/colorSplash"/>
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/lyon"/>
+            android:src="@drawable/logo"/>
     </item>
 </layer-list>
