--- a/app/src/main/res/layout/activity_destination.xml
+++ b/app/src/main/res/layout/activity_destination.xml
@@ -15,4 +15,11 @@
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp" />
 
+    <include
+        android:visibility="gone"
+        android:id="@+id/loading_spinner"
+        layout="@layout/loading_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </RelativeLayout>
