--- a/app/src/main/res/layout/loading_spinner.xml
+++ b/app/src/main/res/layout/loading_spinner.xml
@@ -6,15 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#66000000"
-    >
-
-
-
+>
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+    />
 </LinearLayout>
