--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/logo"
         android:layout_gravity="center"
+        android:contentDescription="Logo"
     />
 
 </LinearLayout>
