--- a/app/src/main/res/layout/row_destination.xml
+++ b/app/src/main/res/layout/row_destination.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
@@ -38,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Name"
+            android:text="@string/row_destination_name"
             android:textSize="20dp"
             android:textStyle="bold" />
 
@@ -46,7 +45,7 @@
             android:id="@+id/tv_extra"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="extra"
+            android:text="@string/row_destination_extra"
             android:textStyle="italic" />
     </LinearLayout>
 </LinearLayout>
